--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Researcher</h3>
+            <h3 class="mb-0">Researcher (Data Analytics)</h3>
             <div class="subheading mb-3"><a href="https://reach2020.eu">REACH 2020</a></div>
             <p>Extract and analyze time-series data obtained from fitness trackers. Analyze trial data. Develop novel machine learning methods to recommend personalized interventions. Prepare deliverables, reports and presentations. Organize Data Analytics workshop. Develop a mobile app to promote physical activeness.</p>
           </div>
