--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <link rel="icon" href="img/favicon_io/favicon.ico">
+
   <title>Igor Kulev</title>
 
   <!-- Bootstrap core CSS -->
