--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5">Technical Skills</h2>
 
         <div class="subheading mb-3">Programming Languages</div>
         <ul class="fa-ul mb-0">
