--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a data scientist, I like hiking &mdash; I enjoy exploring the Swiss mountains and lakes. Also, I like watching mystery, thriller and comedy genre movies and television shows.</p>
+        <p>Apart from being a data scientist, I like hiking &mdash; I enjoy exploring the Swiss mountains and lakes. Also, I like watching mystery, thriller and comedy genre movies.</p>
         
-        <div style="text-align: center;"><img src="img/waterfall.jpg" width="500px"></div>
+        <div style="text-align: center;"><img src="img/waterfall.jpg" width="400px"></div>
       
       </div>
     </section>
