--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching and Research Assistant</h3>
-            <div class="subheading mb-3"><a href="https://finki.ukim.mk/en/">Faculty of Computer Science and Engineering</a><br>Ss. Cyril and Methodius University of Skopje</div>
+            <div class="subheading mb-3"><a href="https://finki.ukim.mk/en/">Faculty of Computer Science and Engineering</a><br>Ss. Cyril and Methodius University in Skopje</div>
             <p>Participate in teaching courses: Algorithms and data structures; Advanced Algorithms; Intelligent User Interfaces; Intelligent Information systems; Multimedia Systems; Computer architecture and organization. Prepare teaching materials. Conduct research on collaborative health-care systems.</p>
           </div>
           <div class="resume-date text-md-right">
