--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
               <img height="160px" src="img/stock.png" style="border-width: 1px;border-style: solid;border-color:rgb(0, 0, 0)">
               </td>
               <td style="vertical-align: middle;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:9;"><span style="font-family:Saira Extra Condensed;font-size: 25px;"><b>Stock Market Trend Prediction</b></span><br>
-                Developed a model based on a Recurrent Neural Network and a Mixture Model to group companies based on their stock market movements before and after the stock market crash in 2008. Used the model to predict how individual stocks change their behavior after the crash based on pre-crash time series data.
+                Developed a method based on a Recurrent Neural Network and a Mixture Model to group companies based on their stock market movements before and after the stock market crash in 2008. Used the model to predict how individual stocks change their behavior after the crash based on pre-crash time series data.
                 <br>
               <span class="badge badge-info">Mixture Model</span>
               <span class="badge badge-info">Latent Variable Model</span> 
