--- a/index.html
+++ b/index.html
@@ -312,6 +312,13 @@
               <td style="vertical-align: middle;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;"><span style="font-family:Saira Extra Condensed;font-size: 25px;"><b>The HackerRank Interview Preparation Kit</b></span><br>
                 This <a href="https://www.hackerrank.com/interview/interview-preparation-kit">kit</a> consists of a set of algorithmic problems organised around core concepts commonly tested during interviews.</td>
             </tr>
+            <tr style="margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;" height="100px">
+              <td width="100px" height="100px" style="vertical-align: middle;text-align: center;background-color: rgba(102, 102, 102, 0.8);margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;">
+                <a href="https://www.hackerrank.com/interview/interview-preparation-kit"><svg height="50px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="coins" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-coins fa-w-16 fa-5x"><path fill="rgb(255, 255, 255)" d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z" class=""></path></svg></a>
+              </td>
+              <td style="vertical-align: middle;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;"><span style="font-family:Saira Extra Condensed;font-size: 25px;"><b>Guided Tour of Machine Learning in Finance</b></span><br>
+                This <a href="https://www.coursera.org/learn/guided-tour-machine-learning-finance">course</a> aims at providing an introductory and broad overview of the field of ML with the focus on applications on Finance.</td>
+            </tr>
           </tbody>
         </table>
 
