--- a/index.html
+++ b/index.html
@@ -94,7 +94,18 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
-
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Data Scientist</h3>
+            <div class="subheading mb-3"><a href="http://roche.com/">Roche</a></div>
+            <p>Develop machine learning methods and algorithms to generate impactful evidence and insights for Roche business. Optimize business performance, solve complex data problems and deliver the insight that helps to define Roche's strategy and enable the organization to reach patients faster.
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - Present</span>
+          </div>
+        </div>
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Researcher (Data Analytics)</h3>
